# MegRay

./: .gitignore  .gitmodules  ACKNOWLEDGMENTS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md
cmake/: Findnccl.cmake  cncl.cmake  cnrt.cmake  gtest.cmake  nccl.cmake  rccl.cmake  ucx.cmake
include/: megray.h
include/megray/: client.h  cnrt_context.h  common.h  communicator.h  config.h.in  context.h  cuda_context.h  debug.h  hip_context.h  megray.h  server.h
include/megray/core/: client.h  common.h  communicator.h  context.h  server.h
include/megray/cuda/: cuda_context.h
include/megray/hip/: hip_context.h
include/megray/nccl/: communicator.h  utils.h
include/megray/rccl/: communicator.h  utils.h
include/megray/ucx/: communicator.h
src/: CMakeLists.txt  client.cpp  client.h  common.cpp  common.h  communicator.cpp  communicator.h  context.h  debug.cpp  debug.h  megray.cpp  megray.h  server.cpp  server.h
src/cncl/: CMakeLists.txt  communicator.cpp  communicator.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  client.cpp  common.cpp  communicator.cpp  debug.cpp  server.cpp
src/nccl/: CMakeLists.txt  communicator.cpp  communicator.h  utils.cpp  utils.h
src/rccl/: CMakeLists.txt  communicator.cpp  communicator.h  utils.cpp  utils.h
src/shm/: CMakeLists.txt  all_gather.cpp  all_reduce.cpp  all_to_all.cpp  broadcast.cpp  communicator.cpp  communicator.h  gather.cpp  reduce.cpp  reduce_scatter.cpp  scatter.cpp  shm_barrier.cpp  shm_ipc.cpp  shm_ipc.h  utils.cpp  utils.h
src/ucx/: CMakeLists.txt  all_gather.cpp  all_reduce.cpp  all_to_all.cpp  broadcast.cpp  communicator.cpp  communicator.h  gather.cpp  kernel.cu  reduce.cpp  reduce_scatter.cpp  scatter.cpp  utils.h
test/: CMakeLists.txt  args.hxx  performance.cpp  test_base.h  test_cambricon.cpp  test_cuda.cpp  test_hip.cpp  test_main.cpp  test_opr.cpp  test_server_client.cpp  test_shm.cpp  test_utils.h
util/: format.sh
